problème au moment de la compilation (puis émulation) sûrement lié aux dépendances

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,7 +53,9 @@ dependencies {
 
 
      // ajout manuel
-     implementation "androidx.navigation:navigation-compose:2.5.3"
+
+     // implementation "androidx.navigation:navigation-compose:2.5.3"
+
 
     // fin de l'ajout manuel
 
